<resources>
    <string name="app_name">PGRS</string>
    <string name="open">open</string>
    <string name="close">close</string>


    <string name="mapbox_access_token">pk.eyJ1IjoiamhvbmplaW5zIiwiYSI6ImNrbjkxNmVqNDEzYzgycW4xMDhsMXJyem0ifQ.f_GyNl6ObfJoPWKhGaV-eQ</string>
    <string name="user_location_permission_explanation">La aplicación requiere de permisos de ubicación para un correcto funcionamiento</string>
    <string name="user_location_permission_not_granted">El permiso de ubicación no ha sido otorgado</string>
    <string name="start_navigation">Start navigation</string>

    <!-- Infowindow SymbolLayer -->
    <string name="capital">Tipo acumulación: %1$s</string>
    <string name="cestas">Operador: %1$s</string>

    <string name="clandestino">Nivel de afectación: %1$s</string>
    <string name="gestores">Tipo residuo: %1$s</string>
    <string name="reportes">Nombre del que reporta: %1$s</string>
    <string name="microruta">Responsable: %1$s</string>
    <string name="bodega">Capacidad: %1$s</string>
    <string name="empresas">NIT: %1$s</string>
    <string name="tap_on_marker_instruction">Seleccione un marcador para obtener mas información</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="visualizacion_de_capas">Visualización de Capas</string>
    <string name="iniciarsesionbtn">iniciarsesionbtn</string>
    <string name="correo">Correo</string>
    <string name="iniciar_sesion">INICIAR SESIÓN</string>
    <string name="contrasena">Contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="repetir_contrasena">Repetir Contraseña</string>
    <string name="reqContrasena">La contraseña debe tener minimo 8 caracteres</string>
    <string name="logo">logo</string>
    <string name="correo2">Correo</string>
    <string name="ingrese_el_valor_de_afectaci_n">Ingrese el valor de afectación</string>
    <string name="enviar">Enviar</string>
    <string name="nombre">Nombre</string>
    <string name="rep_afectacion">rep_afectacion</string>
    <string name="ingrese_el_tipo_de_residuo">Ingrese el tipo de residuo</string>


    <string-array name="critico">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="tiporesiduo">
        <item>Construcción</item>
        <item>Organicos</item>
        <item>Hospitalarios</item>
        <item>Automotriz</item>
        <item>Otro</item>
    </string-array>
</resources>